# support-service

./: .env  Cargo.toml  schema.gql
src/: main.rs
src/context/: mod.rs  shared.rs
src/models/: mod.rs  model.rs  support.rs
src/queue/: broker.rs  mod.rs
src/services/: mod.rs
src/services/graphql/: mod.rs  mutations.rs  queries.rs  subscription.rs
src/utils/: generate.rs  mod.rs
