[package]
name = "actix-web-subscription"
version = "0.1.1"
authors = ["mohamed amine fouzai <mohamed.amine.fouzai@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
actix-rt = "2.8.0"
async-graphql-actix-web = "5.0.8"
async-graphql = "5.0.8"
slab = "0.4.2"
futures-util = "0.3.0"
futures-channel = "0.3.0"
once_cell = "1.0"
futures-timer = "3.0.2"
async-stream = "0.3.0"
serde = "1.0.103"
serde_json = "1.0"
futures = "0.3.4"
mini-redis = "0.4.0"
bson = "2.6.1"
load-dotenv = "0.1.2"
[dependencies.mongodb]
version = "2.5.0"
default-features = true
features = ["tokio-runtime"]
